force-app/main/default/objects/QuestionObject__c/QuestionObject__c.object-meta.xml
<CustomObject>
    <label>QuestionObject</label>
    <nameField>
        <displayFormat>QNS-{0000}</displayFormat>
        <label>QuestionObject Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>QuestionObjects</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>