force-app/main/default/objects/QuestionObject__c/fields/CorrectAnswer__c.field-meta.xml
<CustomField>
    <fullName>CorrectAnswer__c</fullName>
    <label>CorrectAnswer</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Shashank</fullName>
            </value>
            <value>
                <fullName>Soun</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>