force-app/main/default/objects/QuestionObject__c/fields/QuestionsValue__c.field-meta.xml
<CustomField>
    <fullName>QuestionsValue__c</fullName>
    <label>QuestionsValue</label>
    <length>250</length>
    <type>Text</type>
</CustomField>